<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MenuDetailActivity"
    android:background="#ffffff">


    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:background="#009922" />

    <TextView
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="-0.02"
        android:paddingHorizontal="16dp"
        android:text="@string/Rice_and_Risotto"
        android:textColor="#ff5c00"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.02"
            android:text="@string/garlic_sizzling_rice"
            android:textColor="#000000"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_comment"
                android:layout_width="22dp"
                android:layout_height="18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/comment"
                android:textColor="#000000"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:numStars="1"
            android:rating="1"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <TextView
            android:id="@+id/menu_list_item_star_rating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="4.3"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


    <!--밑에탭-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <!--탭바-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp">
            <!--첫번쨰-->
            <LinearLayout
                android:id="@+id/tab_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

                <TextView
                    android:background="@drawable/border_underline"
                    android:id="@+id/tv_tab_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="@string/review"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
            <!--두번째-->
            <LinearLayout
                android:id="@+id/tab_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_tab_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="@string/description"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <!--후기-->
        <LinearLayout
            android:id="@+id/tab_1_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            <ListView
                android:id="@+id/listview_menu_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>


        </LinearLayout>

        <!--설명-->
        <LinearLayout
            android:id="@+id/tab_2_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:paddingHorizontal="24dp">
            <TextView
                android:id="@+id/tv_menu_description"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#000000"
                android:letterSpacing="-0.02"
                android:text="베이컨, 새콤한 마늘 장아찌, 톡톡 씹히는 날치알과 렌치 소스가 함께 어우러진 매드포갈릭 볶음밥
\n\n※Side menu 리소 랍스터(130g) 12,000원, 프레시 부라타 치즈(150g) 9,000원"
                />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>