<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Fragment.Tab_2_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/registration_number"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_accepted_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="0"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_my_turn_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="0"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/th_team"
                android:textColor="#000000"
                android:textSize="15sp" />
        </LinearLayout>


        <!--두번째 레이아웃-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--우리앞에-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="@string/WaitingTeam"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_current_waiting_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:letterSpacing="-0.02"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="55sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:letterSpacing="-0.02"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>
            <!--예상 대기 시간은-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="@string/EstimatedTime"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_current_waiting_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="-0.02"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="55sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="-0.02"
                        android:text="min"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
        <!--우리팀앞에끝-->
        <Button
            android:id="@+id/btn_cancel_waiting"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:background="@drawable/border"
            android:text="@string/cancel" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="10dp"
        android:letterSpacing="-0.02"
        android:text="@string/suggestion"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="#f1f1f1" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

    </FrameLayout>


</LinearLayout>