<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.PlaceDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--컨테이너뷰-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/pic_beach"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="#ff3322" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="18dp"
                android:letterSpacing="-0.02"
                android:text="Tour"
                android:textColor="#ff5c00"
                android:textSize="13sp"
                android:textStyle="bold" />
            <!--연결한것-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:text="@string/Haundae_beach"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="28dp"
                    android:src="@drawable/ic_navigation" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:letterSpacing="-0.02"
                android:text="@string/EstimatedTime"
                android:textColor="#000000"
                android:textSize="13sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <!--별점-->
                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginTop="1dp"
                    android:numStars="1"
                    android:rating="1"
                    android:stepSize="1"
                    android:theme="@style/RatingBar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="-0.02"
                    android:text="4.5"
                    android:textColor="#000000" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="-0.02"
                    android:text="234"
                    android:textColor="#000000" />
            </LinearLayout>
            <!--end of star and comment-->

            <!--description-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="24dp">

                <TextView
                    android:background="@drawable/border_underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="@string/description"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:letterSpacing="-0.02"
                    android:text="@string/Haeundae_desc"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btn_cancel_waiting"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="309dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="37dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/border"
                    android:text="@string/homepage"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
        <!--containerview-->


    </ScrollView>
</LinearLayout>