<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Fragment.Tab_2_Fragment">

    <!--로고-->
    <ImageView

        android:layout_width="165dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_logo" />


    <!--두번째 레이아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--우리앞에-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/WaitingTeam"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_waiting_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="55sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>



        </LinearLayout>
        <!--예상 대기 시간은-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/EstimatedTime"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_estimated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="55sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:letterSpacing="-0.02"
                    android:text="min"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <!--인원-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="11dp"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.02"
            android:text="@string/person"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_adult_minus"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:background="@drawable/ic_minus"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:textColor="#000000"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/tv_adult_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="0"
                android:textColor="#000000"
                android:textSize="55sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/tv_adult_plus"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:background="@drawable/ic_plus"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:textColor="#000000"
                android:textSize="55sp" />
        </LinearLayout>
    </LinearLayout>


    <!--영유아 인원-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="11dp"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.02"
            android:text="@string/child"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_child_minus"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:background="@drawable/ic_minus"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:textColor="#000000"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/tv_child_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="0"
                android:textColor="#000000"
                android:textSize="55sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_child_plus"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:background="@drawable/ic_plus"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:textColor="#000000"
                android:textSize="55sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_start_lining"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_gravity="bottom"
        android:background="#000000"
        android:text="@string/start_in_line"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>